fix sized of visibility indicator

--- a/src/components/VisibilityIndicator/index.module.scss
+++ b/src/components/VisibilityIndicator/index.module.scss
@@ -6,7 +6,8 @@
 
 .icon {
   fill: var(--casper);
-  width: 16px;
+  max-width: 16px;
+  min-width: 16px;
 
   &:hover {
     fill: var(--waterloo);
